--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
             site.github.owner_name }}</a>.</p>
           {% endif %}
 
-          <p>This page was generated
+          <p>This page was modified
           by <a href="https://pages.github.com">GitHub Pages</a>.</p>
         </aside>
       </div>
