--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="{{ site.github.repository_url
-          }}">View On MY GitHub</a></li>
+          }}">View On GitHub</a></li>
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url
             }}">ZIP</a></li>
