--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
           <p>{{ site.description | default:
           site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{
+          <span class="credits left">Project hacked by <a href="{{
           site.github.owner_url }}">{{ site.github.owner_name
           }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash;
