--- a/_layouts/midnight.html
+++ b/_layouts/midnight.html
@@ -25,7 +25,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="{{ site.github.repository_url
-          }}">View On MY GitHub</a></li>
+          }}">View On GitHub</a></li>
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url
             }}">ZIP</a></li>
@@ -45,7 +45,7 @@
           <p>{{ site.description | default:
           site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{
+          <span class="credits left">Site hacked by <a href="{{
           site.github.owner_url }}">{{ site.github.owner_name
           }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash;
