--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,9 @@
           <span class="credits left">Project hacked by <a href="{{
           site.github.owner_url }}">{{ site.github.owner_name
           }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash;
-          Theme
-          by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits right">Slides &mdash;
+          see it
+          by <a href="https://teuffy.github.io/slides">slides</a></span>
         </div>
 
         {{ content }}
